[not to be removed until the end of 2013]
Dear package maintainer! If you are packaging duplicity for some distribution
and used to remove GnuPGInterface.py please note this:
We really need our _own_ patched GnuPGInterface. See README for details.

New in v0.6.20 (2012/??/??)
---------------------------
Enhancements:
- Merged in lp:~ed.so/duplicity/ssh.manpage
  + added gdocs and rsync REQUIREMENTS
  + added cloudfiles documentation
- Merged in lp:~ed.so/duplicity/gpginterface
  + refactor GnuPGInterface to gpginterface.py
    reasoning can be found in README
- Merged in lp:~ed.so/duplicity/duplicity.helpfix
  + fix rare 'TypeError: encode() argument 1 must be string, not None'
  + http://lists.nongnu.org/archive/html/duplicity-talk/2012-09/msg00016.html
- Merged in lp:~ed.so/duplicity/duplicity.tmpspacefix
  + use tempfile.TemporaryFile() so unused temp files are deleted automagically
  + propbably solve bug 'Out of space error while restoring a file'
  + https://bugs.launchpad.net/duplicity/+bug/1005901
  + http://lists.gnu.org/archive/html/duplicity-talk/2012-09/msg00000.html
- Merged in lp:~mterry/duplicity/utf8-po
  + For some crazy reason, the gettext module defaults to giving you strings in
    whatever charset the po file happened to define.  Which means you never know
    what string of bytes you're going to get.  This module makes sure we always
    get utf-8 byte strings.  So we're at least predictable and reduces one
    source of UnicodeDecodeErrors (like in bug 989496)
- Merged in lp:~mterry/duplicity/1031277
  + ssh: actually delete all the requested files, not just the first one
- Merged in lp:~mterry/duplicity/leftover-sigtar
  + So currently, duplicity does not delete signature files when doing a
    remove-all-but-n operation. Seems wrong, since those signature files are now
    useless and take up space.
  + This branch does several things:
    1) Make remove-all-but-n operate on chains. In practice it did before, since